--- a/Pelina Beer App/Base.lproj/Main.storyboard
+++ b/Pelina Beer App/Base.lproj/Main.storyboard
@@ -114,23 +114,15 @@
                                     <constraint firstAttribute="height" constant="300" id="oYq-jo-hjB"/>
                                 </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="favoriteIcon" translatesAutoresizingMaskIntoConstraints="NO" id="xfH-fe-OBv">
-                                <rect key="frame" x="340" y="369" width="30" height="30"/>
-                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="No9-6a-Kab"/>
-                                    <constraint firstAttribute="width" constant="30" id="k4C-6g-Ilt"/>
-                                </constraints>
-                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8ad-t9-VqW" customClass="CosmosView" customModule="Cosmos">
-                                <rect key="frame" x="5" y="374" width="330" height="20"/>
+                                <rect key="frame" x="5" y="374" width="120" height="20"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="JuJ-kv-Rhp"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dadfdsfsfdfsdf fasdf sdfsdfdsf" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0yb-MN-6Tb">
-                                <rect key="frame" x="5" y="394" width="330" height="50"/>
+                                <rect key="frame" x="5" y="394" width="365" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="OS9-X8-gnf"/>
                                 </constraints>
@@ -151,6 +143,15 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MTa-Fb-L3c">
+                                <rect key="frame" x="340" y="364" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="rPb-fz-rae"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="toggleFavoriteAction:" destination="G4f-0M-TRN" eventType="touchUpInside" id="Q7L-rn-k6W"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -158,17 +159,17 @@
                             <constraint firstItem="nEU-lb-mzN" firstAttribute="leading" secondItem="jHk-Bb-omg" secondAttribute="leading" constant="5" id="1Em-co-phN"/>
                             <constraint firstItem="nEU-lb-mzN" firstAttribute="bottom" secondItem="jHk-Bb-omg" secondAttribute="bottom" constant="5" id="2qL-Kl-FQu"/>
                             <constraint firstItem="0yb-MN-6Tb" firstAttribute="top" secondItem="8ad-t9-VqW" secondAttribute="bottom" id="9Ga-Gx-I5I"/>
+                            <constraint firstItem="0yb-MN-6Tb" firstAttribute="top" secondItem="MTa-Fb-L3c" secondAttribute="bottom" id="BBU-i2-oVS"/>
                             <constraint firstItem="nEU-lb-mzN" firstAttribute="top" secondItem="o2A-14-9u0" secondAttribute="bottom" constant="8" id="BZB-ha-2T7"/>
                             <constraint firstItem="8ad-t9-VqW" firstAttribute="top" secondItem="yXP-Sn-WNA" secondAttribute="bottom" constant="10" id="Hmg-6i-6jz"/>
                             <constraint firstItem="jHk-Bb-omg" firstAttribute="trailing" secondItem="nEU-lb-mzN" secondAttribute="trailing" constant="5" id="Hsa-s0-YEi"/>
-                            <constraint firstItem="xfH-fe-OBv" firstAttribute="leading" secondItem="0yb-MN-6Tb" secondAttribute="trailing" constant="5" id="MqD-C4-ozz"/>
-                            <constraint firstItem="xfH-fe-OBv" firstAttribute="top" secondItem="yXP-Sn-WNA" secondAttribute="bottom" constant="5" id="Psj-mH-SYB"/>
+                            <constraint firstItem="jHk-Bb-omg" firstAttribute="trailing" secondItem="0yb-MN-6Tb" secondAttribute="trailing" constant="5" id="JB5-VV-lN6"/>
                             <constraint firstItem="jHk-Bb-omg" firstAttribute="trailing" secondItem="o2A-14-9u0" secondAttribute="trailing" constant="5" id="SPd-N5-VFc"/>
                             <constraint firstItem="jHk-Bb-omg" firstAttribute="trailing" secondItem="yXP-Sn-WNA" secondAttribute="trailing" id="SPk-86-wsZ"/>
                             <constraint firstItem="yXP-Sn-WNA" firstAttribute="top" secondItem="jHk-Bb-omg" secondAttribute="top" id="UXt-J4-dop"/>
                             <constraint firstItem="o2A-14-9u0" firstAttribute="top" secondItem="0yb-MN-6Tb" secondAttribute="bottom" constant="5" id="e4J-cN-549"/>
-                            <constraint firstAttribute="trailing" secondItem="xfH-fe-OBv" secondAttribute="trailing" constant="5" id="md5-Go-NN9"/>
-                            <constraint firstItem="xfH-fe-OBv" firstAttribute="leading" secondItem="8ad-t9-VqW" secondAttribute="trailing" constant="5" id="nzY-7B-VCA"/>
+                            <constraint firstItem="jHk-Bb-omg" firstAttribute="trailing" secondItem="MTa-Fb-L3c" secondAttribute="trailing" constant="5" id="jdg-Gh-a2a"/>
+                            <constraint firstItem="MTa-Fb-L3c" firstAttribute="top" secondItem="yXP-Sn-WNA" secondAttribute="bottom" id="qBz-if-SAe"/>
                             <constraint firstItem="8ad-t9-VqW" firstAttribute="leading" secondItem="jHk-Bb-omg" secondAttribute="leading" constant="5" id="qNn-rg-TfG"/>
                             <constraint firstItem="yXP-Sn-WNA" firstAttribute="leading" secondItem="jHk-Bb-omg" secondAttribute="leading" id="riN-Lo-5Tn"/>
                             <constraint firstItem="0yb-MN-6Tb" firstAttribute="leading" secondItem="jHk-Bb-omg" secondAttribute="leading" constant="5" id="u5S-dZ-gxY"/>
@@ -178,6 +179,7 @@
                     <connections>
                         <outlet property="calificationBar" destination="8ad-t9-VqW" id="Wux-s7-Yod"/>
                         <outlet property="descriptionTextView" destination="nEU-lb-mzN" id="gvN-oD-311"/>
+                        <outlet property="favoriteToggle" destination="MTa-Fb-L3c" id="iO3-GL-eAt"/>
                         <outlet property="posterImageView" destination="yXP-Sn-WNA" id="uHa-Nw-ck7"/>
                         <outlet property="releaseDateLabel" destination="o2A-14-9u0" id="Y3p-iz-i87"/>
                         <outlet property="titleLabel" destination="0yb-MN-6Tb" id="pZm-GX-R9e"/>
@@ -225,7 +227,4 @@
             <point key="canvasLocation" x="137" y="860"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="favoriteIcon" width="48" height="48"/>
-    </resources>
 </document>
